# OCaml-Web

mvc/: dune-project
mvc/src/: dune  main.ml
mvc/src/controller/: dune  routes.ml
mvc/src/model/: dune  model.ml
mvc/src/view/: dune  home.ml
rest_api/: dune-project
rest_api/src/: dune  main.ml
